<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="music_module_name">ModuleMusic</string>

    <string name="music_personality_recommend">Recommend</string>
    <string name="music_anchor_radio">Anchor Radio</string>
    <string name="music_my_music">My Music</string>

    <string name="music_personal_fm">Personal FM</string>
    <string name="music_daily_recommend">Recommend</string>
    <string name="music_song_sheet">Song Sheet</string>
    <string name="music_rank">Rank</string>

    <string name="music_recommend_list">Recommend Song</string>
    <string name="music_recommend_album">New Album</string>
    <string name="music_recommend_radio">Anchor Radio</string>

    <string name="music_classic_sheet">Classic Sheet</string>
    <string name="music_filter_sheet">Filter Sheet</string>

    <string name="music_all_sheet">All Sheet</string>
    <string name="music_sheet_type_chinese">Chinese</string>
    <string name="music_sheet_type_rock">Rock</string>
    <string name="music_sheet_type_ballad">Ballad</string>

    <string name="music_comment">Comment</string>
    <string name="music_share">Share</string>
    <string name="music_download">Download</string>
    <string name="music_multiSelect">MultiSelect</string>

    <string name="music_play_all">Play All</string>
    <string name="music_song_num">(%1$dSongs)</string>
    <string name="music_collection_num">Collection(%1$s)</string>
    <string name="music_collection">Collection</string>

    <string name="music_latest_update">Latest Update</string>
    <string name="music_no_more">No More</string>

    <string name="music_local_music">Local Music</string>
    <string name="music_recent_play">Recently Play</string>
    <string name="music_my_radio">My Radio</string>
    <string name="music_my_collect">My Collection</string>
    <string name="music_my_create_sheet">My Created Sheet(%1$d)</string>
    <string name="music_my_collect_sheet">My Collected Sheet(%1$d)</string>

    <string name="music_scan">Scan Music</string>
    <string name="music_scan_exclude_60s">Do not scan music less than 60s</string>
    <string name="music_scan_start">Start Scan</string>
    <string name="music_scan_stop">Stop Scan</string>
    <string name="music_local_music_empty">Local music is empty, please download</string>
    <string name="music_database_error">Database error</string>
    <string name="music_scan_complete">%1$d Songs has completed</string>
    <string name="music_finish">Finish</string>


    <string name="music_recommend_song">Recommend Song</string>

    <string name="music_song">Song</string>
    <string name="music_artist">Artist</string>
    <string name="music_album">Album</string>
    <string name="music_folder">Folder</string>
    <string name="music_manager">Manager</string>
    <string name="music_add">Add</string>
    <string name="music_love">Love</string>
    <string name="music_delete">Delete</string>
    <string name="music_cancel">Cancel</string>
    <string name="music_collect_sheet">Collect To Sheet</string>
    <string name="music_new_sheet">New Sheet</string>
    <string name="music_my_sheet">My Sheet</string>
    <string name="music_sheet_song_num">%1$dSongs</string>
    <string name="music_sheet_exist">The sheet is already exist</string>
    <string name="music_sheet_contains_song">The song is exist in sheet</string>
    <string name="music_add_sheet_song_success">Add to sheet success</string>
    <string name="music_set_song_love_success">Set song love success</string>
    <string name="music_cancel_song_love_success">Cancel song love success</string>
    <string name="music_confirm_delete">Confirm to delete from sheet？</string>
    <string name="music_delete_song_file">Delete the song file</string>
    <string name="music_local_song_num">%1$dSongs</string>
    <string name="music_collect_sheet_success">Collect sheet success</string>

    <string name="music_play_list_empty">Play list is empty</string>
    <string name="music_get_cover_and_lrc">Get cover and lrc</string>
    <string name="music_play_list">Play list(%1$dSongs)</string>
    <string name="music_play_last">Come to last</string>
    <string name="music_play_first">Come to first</string>

    <string name="music_mode_random">Random Play</string>
    <string name="music_mode_sequence">Sequence Play</string>
    <string name="music_mode_single">Single loop</string>

    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

</resources>