<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/public_height_200dp">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/music_hot_sheet_bg" />

    <TextView
        android:id="@+id/update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/public_mar_left_15dp"
        android:layout_marginTop="@dimen/public_mar_top_15dp"
        android:textColor="@color/public_white"
        android:textSize="@dimen/public_font_10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/music_latest_update" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/public_mar_top_15dp"
        android:layout_marginBottom="@dimen/public_mar_bottom_15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img">


        <TextView
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_comment"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_comment"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />

        <TextView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_share"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_share"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />

        <TextView
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_download"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_download"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />

        <TextView
            android:id="@+id/multiSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_multi_select"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_multiSelect"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>