<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/public_height_50dp"
    android:background="@color/public_custom_color_app_bg">

    <ImageView
        android:id="@+id/play"
        android:layout_width="@dimen/public_width_25dp"
        android:layout_height="@dimen/public_height_25dp"
        android:layout_marginStart="@dimen/public_mar_left_15dp"
        android:src="@drawable/music_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/play_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/public_mar_left_10dp"
        android:text="@string/music_play_all"
        android:textColor="@color/public_custom_color_text_main"
        android:textSize="@dimen/public_font_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/play"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_song_num"
        android:textColor="@color/public_custom_color_text_sub"
        android:textSize="@dimen/public_font_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/play_all"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/multi_select"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:drawableStart="@drawable/music_multi_select"
        android:drawablePadding="@dimen/public_padding_2dp"
        android:gravity="center"
        android:paddingStart="@dimen/public_pad_left_10dp"
        android:paddingEnd="@dimen/public_pad_right_10dp"
        android:text="@string/music_multiSelect"
        android:textColor="@color/public_custom_color_text_main"
        android:textSize="@dimen/public_font_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>