<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_fm"
            android:layout_width="@dimen/public_width_45dp"
            android:layout_height="@dimen/public_height_45dp"
            android:src="@drawable/music_fm_button"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_fm"
            android:layout_marginTop="@dimen/public_mar_top_2dp"
            android:gravity="center"
            android:textSize="@dimen/public_font_11sp"
            android:text="@string/music_personal_fm"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="@dimen/public_width_45dp"
            android:layout_height="@dimen/public_height_45dp"
            android:background="@drawable/music_daily_button"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/music_theme"
            android:textSize="@dimen/public_font_18sp"
            tools:text="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recommend"
            android:layout_marginTop="@dimen/public_mar_top_2dp"
            android:gravity="center"
            android:textSize="@dimen/public_font_11sp"
            android:text="@string/music_daily_recommend"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_songSheet"
            android:layout_width="@dimen/public_width_45dp"
            android:layout_height="@dimen/public_height_45dp"
            android:src="@drawable/music_sheet_button"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_songSheet"
            android:layout_marginTop="@dimen/public_mar_top_2dp"
            android:gravity="center"
            android:textSize="@dimen/public_font_11sp"
            android:text="@string/music_song_sheet"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_rank"
            android:layout_width="@dimen/public_width_45dp"
            android:layout_height="@dimen/public_height_45dp"
            android:src="@drawable/music_rank_button"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_rank"
            android:layout_marginTop="@dimen/public_mar_top_2dp"
            android:gravity="center"
            android:textSize="@dimen/public_font_11sp"
            android:text="@string/music_rank"/>

    </RelativeLayout>


</LinearLayout>