<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/public_height_200dp">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/music_hot_sheet_bg" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/public_width_120dp"
        android:layout_height="@dimen/public_height_120dp"
        android:layout_marginStart="@dimen/public_mar_left_15dp"
        android:layout_marginTop="@dimen/public_mar_top_20dp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/public_mar_top_5dp"
        android:layout_marginEnd="@dimen/public_mar_right_5dp"
        android:drawableLeft="@drawable/music_icon_earphone"
        android:drawablePadding="@dimen/public_padding_2dp"
        android:textColor="@color/public_white"
        android:textSize="@dimen/public_font_10sp"
        app:layout_constraintEnd_toEndOf="@id/img"
        app:layout_constraintTop_toTopOf="@+id/img"
        tools:text="100万" />


    <TextView
        android:id="@+id/title"
        android:layout_width="@dimen/public_width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/public_mar_top_10dp"
        android:padding="@dimen/public_padding_5dp"
        android:textColor="@color/public_white"
        android:textSize="@dimen/public_font_14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/img"
        tools:text="魔岩唱片—致灿烂的理想时代" />


    <TextView
        android:id="@+id/des"
        android:layout_width="@dimen/public_width_0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:padding="@dimen/public_padding_5dp"
        android:textColor="@color/public_white_transparency_500"
        android:textSize="@dimen/public_font_11sp"
        app:layout_constraintLeft_toRightOf="@id/img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="在极富盛名的滚石唱片旗下，曾经有过一个辉煌的独立音乐厂牌：魔岩唱片。\n滚石唱片副总经理张培仁，于1991年在滚石旗下成立魔岩文化公司。同时大力发展港台地区的独立音乐" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/public_mar_top_15dp"
        android:layout_marginBottom="@dimen/public_mar_bottom_15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img">


        <TextView
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_comment"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_comment"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />

        <TextView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_share"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_share"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />

        <TextView
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_download"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_download"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />

        <TextView
            android:id="@+id/multiSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/music_sheet_multi_select"
            android:drawablePadding="@dimen/public_padding_2dp"
            android:gravity="center"
            android:text="@string/music_multiSelect"
            android:textColor="@color/public_white"
            android:textSize="@dimen/public_font_11sp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>