<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pop_win_name_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_50dp"
        android:layout_marginStart="@dimen/public_mar_left_10dp"
        android:gravity="center_vertical"
        tools:text="歌曲：遥远的她" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_0_5dp"
        android:background="@color/public_common_touch_bg" />

    <LinearLayout
        android:id="@+id/pop_win_add_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_50dp"
        android:background="@drawable/public_selector_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pop_win_add_iv"
            android:layout_width="@dimen/public_width_25dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/public_mar_left_10dp"
            android:src="@drawable/music_menu_phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pop_win_add_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/public_height_0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/music_add" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_0_5dp"
                android:background="@color/public_common_touch_bg" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pop_win_love_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_50dp"
        android:background="@drawable/public_selector_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pop_win_love_iv"
            android:layout_width="@dimen/public_width_25dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/public_mar_left_10dp"
            android:src="@drawable/music_menu_love"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pop_win_love_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/public_height_0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/music_love" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_0_5dp"
                android:background="@color/public_common_touch_bg" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pop_win_delete_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_50dp"
        android:background="@drawable/public_selector_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pop_win_delete_iv"
            android:layout_width="@dimen/public_width_25dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/public_mar_left_10dp"
            android:src="@drawable/music_menu_delete"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pop_win_delete_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/public_height_0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/music_delete" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_0_5dp"
                android:background="@color/public_common_touch_bg" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pop_win_cancel_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_50dp"
        android:background="@drawable/public_selector_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pop_win_cancel_iv"
            android:layout_width="@dimen/public_width_25dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/public_mar_left_10dp"
            android:src="@drawable/music_menu_cancel"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pop_win_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/public_height_0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/music_cancel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_0_5dp"
                android:background="@color/public_common_touch_bg" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>